Fix height on mobile devies

--- a/src/assets/css/PageFlexBase.css
+++ b/src/assets/css/PageFlexBase.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    height: 100dvh;
 }
 
 .header-wrapper {
